--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["airbrake", "laravel"],
     "require": {
         "php": ">=8.1",
-        "airbrake/phpbrake": "^0.8.0",
+        "airbrake/phpbrake": "dev-monolog-3",
         "illuminate/support": "^9.0|^10.0"
     },
     "license": "MIT",
@@ -26,6 +26,12 @@
             "providers": [
                 "Kouz\\LaravelAirbrake\\ServiceProvider"
             ]
+        }
+    },
+    "repositories": {
+        "phpbrake": {
+            "type": "vcs",
+            "url": "https://github.com/DoctorMcKay/airbrake-phpbrake.git"
         }
     }
 }
